syntax = "proto3";

package api.filesystem.service.filecommonv1;

// 多语言特定包名，用于源代码引用
option go_package = "gitlab.lainuoniao.cn/eden-quan/proto-service/api/filesystem-service/v1/resources;filesystemv1";

import "third_party/validate/validate.proto";
import "api/filesystem-service/v1/errors/filesystem.fileio.error.v1.proto";

// 定义文件级别的验证插件错误码, 在这个文件中的所有 Message 的验证失败错误都会使用该错误码
option (validate.file_error) = {
  biz_code: 10010001,
  http_code: 400
};

message FSCommonRequest
{
  string path = 1;
}

message FSCommonReply
{
  fileioerrorv1.FILEIO_ERROR code = 1;
  string message = 2;
}